para forzar el conflicto en index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <header>
-        <h1>Práctica Formativa 1</h1>        
+        <h1>Práctica Formativa 1 forzado de conflicto</h1>        
     </header>
       
     <section>
